# docx-templates

./: README.md  pyproject.toml
src/docx_templates/: main.py
